[package]
name = "run-length"
version = "0.1.0"
edition = "2021"
description = "Run-length encoding and variants: basic RLE, PackBits, modified RLE for binary data, and adaptive RLE"
license = "MIT"
repository = "https://github.com/SuperInstance/run-length"
keywords = ["rle", "compression", "encoding", "packbits", "binary"]
categories = ["algorithms", "compression", "encoding"]
readme = "README.md"

[lib]
name = "run_length"
path = "src/lib.rs"
